--- a/2023_Q3_PLN_ATIVIDADE_PRÁTICA_04.ipynb
+++ b/2023_Q3_PLN_ATIVIDADE_PRÁTICA_04.ipynb
@@ -74,7 +74,7 @@
         "\n",
         "**Integrante 01:**\n",
         "\n",
-        "`Luiz Gustavo Barros coutinho Paiva RA: 11202020464`\n"
+        "`Luiz Gustavo Barros Coutinho Paiva RA: 11202020464`\n"
       ],
       "metadata": {
         "id": "tnIArN0QY-Ek"
